Add game interface functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <div>
         <p>
-            Open the console to play
+            Play Rock Paper Scissors game !
         </p>
     </div>
+
+    <button id="rock">Rock</button> 
+    <button id="paper">Paper</button> 
+    <button id="scissors">Scissors</button> 
 
 
     <script src="script.js"></script>
